--- a/TaintFormat/TaintFormat/TaintFormat.vcxproj
+++ b/TaintFormat/TaintFormat/TaintFormat.vcxproj
@@ -84,10 +84,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
     <ClInclude Include="mega_d.h" />
     <ClInclude Include="rc4test.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="zeus.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mega_d.cpp" />
@@ -97,6 +99,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TaintFormat.cpp" />
+    <ClCompile Include="zeus.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
