agobotsim first working version

--- a/bewareircd/ircd.conf
+++ b/bewareircd/ircd.conf
@@ -1,7 +1,7 @@
 # servername::server description::numeric. 
 # change numeric to something unique on the network
 
-M:my.server.name::I'm too lazy to edit ircd.conf::1
+M:agonet.net::Agonet server::7
 
 # accept connections on port 6667 (clients) and port 4400 (servers)
 
@@ -19,7 +19,7 @@ Y:20:90:300:0:3000000
 
 # standard I-line, accept everyone, max. 3 clones
 
-I:*@*:3:*@*::1
+I:*@*:30:*@*::1
 
 # standard I-line for IPv6 connections: max 5 clones from a /48
 I:"*@::/0":5/48:nomatch::1
