--- a/TaintFormat/TaintFormat/TaintFormat.vcxproj.filters
+++ b/TaintFormat/TaintFormat/TaintFormat.vcxproj.filters
@@ -40,6 +40,12 @@
     <ClInclude Include="md5test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="base64test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="stormtest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -61,6 +67,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="base64test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="stormtest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
