--- a/TaintFormat/TaintFormat/TaintFormat.vcxproj
+++ b/TaintFormat/TaintFormat/TaintFormat.vcxproj
@@ -85,15 +85,18 @@
     <Text Include="ZeuS_message_format.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="base64test.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="md5test.h" />
     <ClInclude Include="mega_d.h" />
     <ClInclude Include="rc4test.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="stormtest.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="zeus.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="base64test.cpp" />
     <ClCompile Include="common.cpp" />
     <ClCompile Include="md5test.cpp" />
     <ClCompile Include="mega_d.cpp" />
@@ -102,6 +105,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="stormtest.cpp" />
     <ClCompile Include="TaintFormat.cpp" />
     <ClCompile Include="zeus.cpp" />
   </ItemGroup>
