--- a/TaintFormat/TaintFormat/TaintFormat.vcxproj.filters
+++ b/TaintFormat/TaintFormat/TaintFormat.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClInclude Include="stormtest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="zeroaccess.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -73,6 +76,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stormtest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="zeroaccess.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
