--- a/TaintFormat/TaintFormat/TaintFormat.vcxproj
+++ b/TaintFormat/TaintFormat/TaintFormat.vcxproj
@@ -87,6 +87,8 @@
   <ItemGroup>
     <ClInclude Include="base64test.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="festi.h" />
+    <ClInclude Include="mariposa.h" />
     <ClInclude Include="md5test.h" />
     <ClInclude Include="mega_d.h" />
     <ClInclude Include="rc4test.h" />
@@ -99,6 +101,8 @@
   <ItemGroup>
     <ClCompile Include="base64test.cpp" />
     <ClCompile Include="common.cpp" />
+    <ClCompile Include="festi.cpp" />
+    <ClCompile Include="mariposa.cpp" />
     <ClCompile Include="md5test.cpp" />
     <ClCompile Include="mega_d.cpp" />
     <ClCompile Include="rc4test.cpp" />
