--- a/TaintFormat/TaintFormat/TaintFormat.vcxproj
+++ b/TaintFormat/TaintFormat/TaintFormat.vcxproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <ClInclude Include="base64test.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="des_modes_test.h" />
     <ClInclude Include="festi.h" />
     <ClInclude Include="mariposa.h" />
     <ClInclude Include="md5test.h" />
@@ -101,6 +102,7 @@
   <ItemGroup>
     <ClCompile Include="base64test.cpp" />
     <ClCompile Include="common.cpp" />
+    <ClCompile Include="des_modes_test.cpp" />
     <ClCompile Include="festi.cpp" />
     <ClCompile Include="mariposa.cpp" />
     <ClCompile Include="md5test.cpp" />
