--- a/TaintFormat/TaintFormat/TaintFormat.vcxproj.filters
+++ b/TaintFormat/TaintFormat/TaintFormat.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClInclude Include="mariposa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="des_modes_test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -91,6 +94,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="mariposa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="des_modes_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
